--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto = update 
+
+logging.level.org.springframework.security=DEBUG
+#spring.security.user.name=rishad
+#spring.security.user.password=password
+#spring.security.user.roles=ADMIN
