--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8085
 # db properties
 spring.datasource.url=jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimeZone=UTC
 spring.datasource.username=root
@@ -6,9 +7,13 @@ spring.datasource.password=root
 # hibernate
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto = update 
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
 #spring.security.user.name=rishad
 #spring.security.user.password=password
 #spring.security.user.roles=ADMIN
+
+# App Properties
+app.jwt-secret=JWTSecretKeyBangladeshDhakaStackOverflow
+app.jwt-expiration-milliseconds=604800000
